welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:28: error: value - is not a member of scala.collection.immutable.Range.Inclusive
	for(i <- 0 to table.length -){
                                   ^